# elide-router-rust

./: .env.dev  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose-dev.yaml  docker-compose-test.yaml  docker-compose.yaml
migrations/2021-01-05-165039_create_routes/: down.sql  up.sql
migrations/2021-01-06-165256_create_users/: up.sql
migrations/2021-01-06-165639_create_routes/: up.sql
migrations/2021-01-21-153643_create_users/: up.sql
migrations/2021-01-26-073930_create_users/: up.sql
migrations/2021-01-26-073936_create_routes/: up.sql
migrations/2021-01-26-160823_create_users/: up.sql
migrations/2021-01-26-160829_create_routes/: up.sql
scripts/: server_setup.sh
setup/: nginx.conf  server_setup.sh
src/: main.rs  schema.rs
src/actors/: db.rs
src/actors/db/: articles.rs  mod.rs  routes.rs  users.rs
src/handlers/: availability.rs  mod.rs  redirects.rs  routes.rs  users.rs
src/models/: articles.rs  extras.rs  mod.rs  routes.rs  users.rs
src/routes/: articles.rs  mod.rs  redirects.rs  users.rs
src/utils/: crypto.rs  mod.rs
